--- a/app/src/main/res/layout/article_item.xml
+++ b/app/src/main/res/layout/article_item.xml
@@ -37,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/thumbnail"
                 android:textColor="@color/article_title"
+                android:layout_margin="10dp"
                 android:textSize="@dimen/article_title" />
 
             <TextView
@@ -44,6 +45,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/title"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 android:textSize="@dimen/article_description" />
 
 
